Fix flex alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,8 +23,8 @@ header{
   display: flex;
   -webkit-align-items: center;
   align-items: center;
-  -webkit-justify-content: end;
-  justify-content: end;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
   font-size: 1.8rem;
   background: #fceaf2;
   box-shadow: 0 0 8px #737373;
